--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="Init" />
+            android:text="引擎初始化" />
         <Button
             android:id="@+id/startPreview"
             android:layout_width="120dp"
@@ -50,24 +50,24 @@
             android:id="@+id/subscribeTopic"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="Subscribe" />
+            android:text="订阅内容" />
 
         <Button
             android:id="@+id/startRecord"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="Record" />
+            android:text="开始录制" />
         <Button
             android:id="@+id/shareMedia"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="Share" />
+            android:text="分享" />
         <Button
             android:id="@+id/switchCamera"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            android:text="Switch camera" />
+            android:text="Switch" />
 
 
         <!--<Button-->
